# swagger/swagger.json
@@ -19,9 +19,12 @@
     {
       "name": "User/historicOrder",
       "description": "Operações sobre o historico de encomendas do utilizador"
+    },
+    {
+      "name": "User/Addresses",
+      "description": "Operações sobre o as moradas de encomenda do utilizador"
     }
   ],
-  
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
@@ -269,17 +272,173 @@
           }
         }
       }
+    },
+    "/user/{userId}/addresses": {
+      "parameters": [
+        {
+          "name": "userId",
+          "in": "path",
+          "required": true,
+          "description": "Id do utilizador",
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": ["User/Addresses"],
+        "summary": "Retorna todas as moradas do utilizador",
+        "responses": {
+          "200": {
+            "description": "Moradas do utilizador encontradas",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/AddressOrder"
+              }
+            }
+          }, 
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      },
+      "post": {
+        "tags": ["User/Addresses"],
+        "summary": "Permite ao utilizador criar uma nova morada",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "address",
+            "description": "Morada a ser criada",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddressOrder"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Morada criada com sucesso",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/AddressOrder"
+              }
+            }
+          }, 
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "409": {
+            "description": "A morada que tentou intorduzir já existe, na conta do utilizador."
+          },
+          "422": {
+            "description": "Algum dos campos obrigatorio não está preenchido ou está mal preenchido!"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      }
+    },
+    "/user/{userId}/addresses/{addressId}": {
+      "parameters": [
+        {
+          "name": "userId",
+          "in": "path",
+          "required": true,
+          "description": "Id do utilizador",
+          "type": "string"
+        },
+        {
+          "name": "addressId",
+          "in": "path",
+          "required": true,
+          "description": "Id da morada",
+          "type": "string"
+        }
+      ],
+      "get": {
+        "tags": ["User/Addresses"],
+        "summary": "Retorna uma morada especifica, de acordo com o id da mesma",
+        "responses": {
+          "200": {
+            "description": "Moradas do utilizador encontradas",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/AddressOrder"
+              }
+            }
+          }, 
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      },
+      "put": {
+        "tags": ["User/Addresses"],
+        "summary": "Permite ao utilizador atualizar os dados de uma morada especifica",
+        "parameters": [
+          {
+            "in": "body",
+            "name": "address",
+            "description": "Morada a ser criada",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/AddressOrder"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Moradas atualizada com sucesso",
+            "schema": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/AddressOrder"
+              }
+            }
+          }, 
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      },
+      "delete": {
+        "tags": ["User/Addresses"],
+        "summary": "Permite ao utilizador eliminar uma das suas moradas",
+        "responses": {
+          "204": {
+            "description": "Moradas eliminada com sucesso"
+          }, 
+          "400": {
+            "description": "Morada não encontrada ou já foi removida"
+          },
+          "404": {
+            "description": "Utilizador não encontrado ou não tem moradas"
+          },
+          "500": {
+            "description": "Erro interno"
+          }
+        }
+      }
     }
   },
   "definitions": {
     "Address": {
       "type": "object",
-      "required": ["_id", "street", "postal_code", "city"],
+      "required": ["street", "postal_code", "city"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "street": {
           "type": "string",
           "maxLength": 250
@@ -291,42 +450,27 @@
         "city": {
           "type": "string",
           "maxLength": 100
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "AddressOrder": {
       "type": "object",
-      "required": ["_id", "address"],
+      "required": ["address"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
+        "nif": {
+          "type": "integer",
+          "minimum": 100000000,
+          "maximum": 999999999
         },
         "address": {
           "$ref": "#/definitions/Address"
-        },
-        "nif": {
-          "type": "integer",
-          "pattern": "^[0-9]{9}$"
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "Item": {
       "type": "object",
-      "required": ["_id", "item", "portion", "price", "quantity" ],
+      "required": ["item", "portion", "price", "quantity" ],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
         "item": {
           "type": "string",
           "maxLength": 50,
@@ -345,21 +489,14 @@
           "type": "integer",
           "minimum": 1,
           "maximum": 10
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "FaturaCliente": {
       "type": "object",
-      "required": ["_id", "firstName","lastName","phoneNumber", "email"],
+      "required": ["firstName","lastName","phoneNumber", "email"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "firstName": {
           "type": "string",
           "maxLength": 50,
@@ -379,21 +516,14 @@
           "type": "string",
           "format": "email",
           "maxLength": 50
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "FaturaRestaurant": {
       "type": "object",
-      "required": ["_id", "name","phoneNumber", "email"],
+      "required": ["name","phoneNumber", "email"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "name": {
           "type": "string",
           "maxLength": 100
@@ -407,22 +537,15 @@
           "type": "string",
           "format": "email",
           "maxLength": 50
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "Order": {
       "type": "object",
-      "required": ["_id", "date", "client", "restaurant", "addressOrder", "itens", "price", 
+      "required": ["date", "client", "restaurant", "addressOrder", "itens", "price", 
       "status", "type"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "date": {
           "type": "string",
           "format": "date-time"
@@ -460,22 +583,15 @@
             "delivery",
             "pickup"
           ]
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "OrderUser": {
       "type": "object",
-      "required": ["_id", "date", "restaurant", "addressOrder", "itens", "price", 
+      "required": ["date", "restaurant", "addressOrder", "itens", "price", 
       "status", "type"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "date": {
           "type": "string",
           "format": "date-time"
@@ -510,21 +626,14 @@
             "delivery",
             "pickup"
           ]
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "Perfil": {
       "type": "object",
-      "required": ["_id", "phoneNumber", "email", "password", "priority", "banned"],
+      "required": ["phoneNumber", "email", "password", "priority", "banned"],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "perfilPhoto": {
           "type": "string",
           "default": ""
@@ -584,22 +693,15 @@
         "banned": {
           "type": "boolean",
           "default": false
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     },
     "User": {
       "type": "object",
-      "required": ["_id", "firstName", "lastName", "perfil"
+      "required": ["firstName", "lastName", "perfil"
       ],
       "properties": {
-        "_id": {
-          "type": "string",
-          "uniqueItems": true
-        },
+        
         "firstName": {
           "type": "string",
           "maxLength": 50,
@@ -632,17 +734,12 @@
           "format": "date",
           "minimum": "1900-01-01",
           "maximum": "9999-12-31"
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     }, 
     "UserUpdate": {
       "type": "object",
-      "required": ["firstName", "lastName", "perfil"
-      ],
+      "required": ["firstName", "lastName", "perfil"],
       "properties": {
         "firstName": {
           "type": "string",
@@ -655,37 +752,30 @@
           "pattern": "^[a-zA-Z\\s]*$"
         },
         "perfil": {
-          "phoneNumber": {
-            "type": "integer",
-            "minimum": 100000000,
-            "maximum": 999999999
+          "type": "object",
+          "properties": {
+            "phoneNumber": {
+              "type": "integer",
+              "minimum": 100000000,
+              "maximum": 999999999
+            },
+            "email": {
+              "type": "string",
+              "format": "email",
+              "maxLength": 50
+            },
+            "perfilPhoto": {
+              "type": "string",
+              "default": ""
+            }
           },
-          "email": {
-            "type": "string",
-            "format": "email",
-            "maxLength": 50
-          },
-          "perfilPhoto": {
-            "type": "string",
-            "default": ""
-          }
-        },
-        "addresses": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/AddressOrder"
-          },
-          "default": []
+          "required": ["phoneNumber", "email", "perfilPhoto"]
         },
         "birthdate": {
           "type": "string",
           "format": "date",
           "minimum": "1900-01-01",
           "maximum": "9999-12-31"
-        },
-        "updated_at": {
-          "type": "string",
-          "format": "date-time"
         }
       }
     }
